--- a/BondVillains/Base.lproj/Main.storyboard
+++ b/BondVillains/Base.lproj/Main.storyboard
@@ -110,7 +110,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" systemColor="systemIndigoColor"/>
                         <constraints>
                             <constraint firstItem="Xr1-tO-W7v" firstAttribute="centerX" secondItem="jNp-yn-W8g" secondAttribute="centerX" id="FDf-C2-f4d"/>
                             <constraint firstItem="I3I-Ij-srW" firstAttribute="leading" secondItem="jNp-yn-W8g" secondAttribute="leading" constant="10" id="G52-c5-UOg"/>
@@ -128,6 +128,9 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemIndigoColor">
+            <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
